QueryInfoForm fix for ToggleIcon alignment with various form input types

--- a/packages/components/src/theme/form.scss
+++ b/packages/components/src/theme/form.scss
@@ -341,3 +341,7 @@ textarea.form-control {
     // Bootstrap wants all modal buttons on the right side of the footer, so we need to override that.
     text-align: left;
 }
+
+.query-info-form .control-label {
+    padding-top: 0;
+}
